# hardtarget

./: .gitignore  .gitlab-ci.yml  DEVELOP.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  USAGE.md  analyze_data.py  analyze_fine.py  analyze_gmf.py  conftest.py  gmf.c  gmf.py  gmf_c.py  gmf_cpu.py  gmf_cpu_numpy.py  gmf_opts.py  gmfgpu.cu  gmfgpu.h  gmfgpu.py  plot_gmf.py  plot_sweeps.py  pyproject.toml  pytest.ini  requirements  run_sim.py  setup.cfg  setup.py  sim_raw.py
.github/workflows/: Run_tests.yaml  flake8-lint.yml  lint.yml  lintandtest.yml  test.yml  test_build.yaml  test_deployment.yaml
cfg/: danielk_test.ini  eiscat_uhf_2021_example.ini  esr_2018.ini  ingar.ini  leo_bpark.ini  sim.ini  test.ini  uhf_2021.11.23.ini  uhf_meteors.ini
cfiles/: gmf.h
data/e3d_htpl_end_to_end/: incidental_tracking.pickle  observe.py  scanning.pickle  simulate_incidental_tracking.py  simulate_scanning.py  simulate_tracking.py  tracking.pickle
docker/: DOCKER.md  Dockerfile
docs/: Makefile
docs/source/: api_eiscat.rst  cli.rst  concept_gmf.rst  concepts.rst  conf.py  develop.rst  drf.rst  eiscat.rst  format_drf.rst  format_gmf.rst  gmf.rst  index.rst  install.rst  parallelism.rst  params_experiment.rst  params_processing.rst  quickstart.rst  references.bib  sg_execution_times.rst
docs/source/extensions/irf/: autopackages.py
docs/source/notebooks/: getting_started.md
docs/source/static/: fixes.css
docs/source/templates/autosummary/: class.rst  method.rst  module.rst  property.rst
examples/: README.md  README.rst  back_to_basics.py  basic_gmf_test.py  check_cuda_devices.py  drf_RTI_plot.py  experiment_data.py  plot_analyze_gmf_output.py  plot_logo.py  prepare_examples.sh  print_analysis_parameters.py  profile_performance.py  profile_speed.py  run_gmf_programmatically.py  run_gmf_programmatically__no_agl.py  simulate_hard_target.py  simulate_hard_target__no_agl.py  test_case.sh  visualize_analysis_parameters.py  visualize_exp_and_analysis.py  visualize_gmf_values.py  visualize_matched_filter.py
examples/back_to_basics/: part1_boxcar_fft.py  part2_doppler_drift.py  part3_sweep_acceleration.py  part4_determine_acceleration.py  part5_ambiguity_function.py  part6_ipp_number.py  part7_dpt_criterion.py  part8_plot_gmf.py
examples/cfg/: example_uhf_analysis.ini  sim_test.ini  test.ini
examples/data/: example_data.json
examples/eiscat_download/: batch_download.py  eiscat_taskmanager.py  masterworker.py  products.json  taskmanager.py
examples/test_analyze/: test_analyze_resume.py
htdocs/: README.rst
htdocs/docs/source/: conf.py  drf.rst  index.rst  install.rst
htdocs/source/: api_eiscat.rst  api_gmf.rst  cli.rst  conf.py  drf.rst  experiment_parameters.rst  format_drf.rst  gmf.rst  index.rst  install.rst  params_experiment.rst  params_processing.rst  quickstart.rst  signal_parameters.rst
htdocs/source/api/: api_eiscat.rst
src/gmf_c_lib/: Makefile  gmf.c  gmf.h
src/gmf_cuda_lib/: Makefile  gmfgpu.cu  gmfgpu.h  hello.cu  hello_world  testcuda.py
src/hardtarget/: __init__.py  __main__.py  analyze_gmf.py  analyze_ipps.py  config.py  configuration.py  digitalrf_wrapper.py  drf_metadata.py  drf_utils.py  global_mpi.py  gmf.py  gmf_c.py  gmf_cpu_numpy.py  gmf_in_utils.py  gmf_opts.py  gmf_out_utils.py  gmf_utils.py  gmfgpu.py  noise.py  path.py  profiling.py  run_sim.py  stuffr.py  utilities.py  utils.py
src/hardtarget/analysis/: __init__.py  analysis_utils.py  analyze_gmf.py  analyze_ipps.py  analyze_params.py  gmf_opts.py  gmf_params.py  gmf_utils.py  mock_gmf_out.py  plot_gmf.py  test_pointing.py  units.py  utils.py
src/hardtarget/analysis/gmf/: __init__.py  gmf_c.py  gmf_cpu_numpy.py  gmf_cuda.py  gmf_numpy.py
src/hardtarget/cfiles/: gmf.c
src/hardtarget/cli/: __init__.py  analyze.py  check_cuda.py  cli_gmf.py  cmd_analyse.py  cmd_analyze.py  cmd_check.py  cmd_convert.py  cmd_download.py  cmd_gmf.py  cmd_inspect.py  cmd_plot.py  commands.py  convert.py  convert_eiscat.py  cudacheck.py  download_eiscat.py  drfinfo.py  eiscat2drf.py  info_drf.py  info_gmf.py  inspect_drf.py  inspect_gmf.py  plot_drf.py  plot_gmf.py  utils.py
src/hardtarget/convert/: drf_metadata.py  eiscat.py  eiscat_convert.py
src/hardtarget/examples/: run_sim.py  tx_pwr.py
src/hardtarget/experiments/: __init__.py  download.py  eiscat_download.py  leo_bpark.ini
src/hardtarget/gmf/: __init__.py  gmf_c.py  gmf_cuda.py  gmf_numpy.py  numpy_ctypes.py  preprocess.py
src/hardtarget/io/: __init__.py  convert_eiscat2drf.py  eiscat2drf.py  parbl.py
src/hardtarget/plotting/: __init__.py  drf.py  gmf.py  plot_gmf.py  sweeps.py
src/hardtarget/radars/eiscat/: __init__.py  asimut_patch.py  check_eiscat_data.py  convert.py  convert2.py  download.py  (+9 more)
src/hardtarget/simulation/: __init__.py  _simulate_drf.py  sim_raw.py  simulate_drf.py  simulation_utils.py
src/hardtarget/tests/: test_config.py  test_gmf_c.py  test_gmf_numpy.py
src/hardtarget/tools/: __init__.py  analyze.py  cli_analyze_gmf.py  cudacheck.py  drfinfo.py  eiscat2drf.py
tests/: __main__.py  test_analysis_utils.py  test_analyze.py  test_config.py  test_convert.py  test_digitalrf_wrapper.py  test_eiscat_download.py  test_eiscat_drf.py  test_eiscat_drf2.py  test_gmf.py  test_gmf_c.py  test_gmf_cuda.py  test_gmf_numpy.py  test_gmf_out.py  test_mpi.py  test_simulate_and_analysis.py
