[metadata]
name = hardtarget
version = 0.2.0
description = Hard target processing of radar data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Juha Vierinen, et al.
author_email = juha-pekka.vierinen@uit.no
license = MIT
license_files = LICENSE
readme = README.md
url = https://github.com/jvierine/hard_target
classifiers = 
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: C
project_urls =
	Tracker = https://github.com/jvierine/hard_target/issues


[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    h5py >= 2.10.0
    digital_rf >= 2.6.6
    numpy >= 1.19.5
    scipy >= 1.4.1

[options.package_data]
hardtarget = tools/cudacheck.cu

[options.packages.find]
where=src


[options.entry_points]
console_scripts = 
    convert_eiscat2drf = hardtarget.io.convert_eiscat2drf:main
    cudacheck = hardtarget.tools.cudacheck:main

[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    setuptools >= 57.4.0
    numpydoc >= 1.2
mpi =
    mpi4py >= 3.1.1
plotting = 
    matplotlib >= 3.3.4


[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 110
exclude = src/metecho/__pycache__,src/metecho/__init__.py,src/metecho/**/__init__.py