[metadata]
name = hardtarget
description = Hard target processing of radar data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen, Juha Vierinen, et al.
author_email = daniel.kastinen@irf.se, juha-pekka.vierinen@uit.no
license = MIT
license_files = LICENSE
readme = README.md
url = https://github.com/danielk333/hardtarget
classifiers = 
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: C
project_urls =
	Tracker = https://github.com/danielk333/hardtarget/issues

[options]
package_dir = 
    hardtarget = src/hardtarget
    hardtarget.gmf_cuda_lib = src/gmf_cuda_lib
    hardtarget.gmf_c_lib = src/gmf_c_lib
    hardtarget.docs = docs
packages =
    hardtarget
    hardtarget.gmf_cuda_lib
    hardtarget.gmf_c_lib
    hardtarget.docs
python_requires = >=3.7
install_requires =
    h5py >= 2.10.0
    digital_rf >= 2.6.6
    numpy >= 1.19.5
    scipy >= 1.4.1
    tqdm >=  4.66.1
include_package_data = True

[options.package_data]
hardtarget = 
    experiments/*.ini
    experiments/*.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    hardtarget = hardtarget.cli:main

[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    sphinx_c_autodoc >= 1.3.0
    flake8 >= 6.0.0
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    pytest-cov >= 4.1.0
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    myst-nb >= 0.17.2
    ipykernel >= 6.9.1
    radon >= 5.1.0
    numpydoc >= 1.2
    pre-commit > 3.0.0
    black >= 23.3.0
    auditwheel >= 5.4.0
    patchelf >= 0.14
mpi =
    mpi4py >= 3.1.1
plotting = 
    matplotlib >= 3.3.4
profiling =
    yappi >= 1.4.0

[flake8]
ignore = D203,E251,E126,E226,W504,W503,W605
max-line-length = 110
exclude = src/hardtarget/__pycache__,src/hardtarget/__init__.py,src/hardtarget/**/__init__.py
